--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- update the version number as needed -->
-    <script defer src="/__/firebase/7.13.1/firebase-app.js"></script>
+    <script defer src="/__/firebase/8.0.0/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.13.1/firebase-firestore.js"></script>
+    <script defer src="/__/firebase/8.0.0/firebase-firestore.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
@@ -53,7 +53,9 @@
 		<!-- playsinline属性を指定すると要素の再生領域内で映像を再生する。 -->
     <video id="localVideo" muted autoplay playsinline></video>
 		<!-- videoタグにautoplay属性が指定されると再生可能になった時点で即座に再生が始まる -->
-    <video id="remoteVideo" autoplay playsinline></video>
+    <video id="remoteVideo-1" autoplay playsinline></video>
+		<video id="remoteVideo-2" autoplay playsinline></video>
+		<video id="remoteVideo-3" autoplay playsinline></video>
 		<!-- 補足：src属性のなかに表示したいメディアへのパスを含めると、その動画が再生可能になる -->
 </div>
 <!-- role="alertdialog"としておくと、モーダルウィンドウが開くと同時にダイアログと表示してくれる -->
