--- a/public/index.html
+++ b/public/index.html
@@ -65,10 +65,14 @@
 		<!-- playsinline属性を指定すると要素の再生領域内で映像を再生する。 -->
     <video id="localVideo" muted autoplay playsinline></video>
 		<!-- videoタグにautoplay属性が指定されると再生可能になった時点で即座に再生が始まる -->
+		<div id="remote-videos">
+		<!--
     <video id="remoteVideo-1" autoplay playsinline></video>
 		<video id="remoteVideo-2" autoplay playsinline></video>
 		<video id="remoteVideo-3" autoplay playsinline></video>
+		-->
 		<!-- 補足：src属性のなかに表示したいメディアへのパスを含めると、その動画が再生可能になる -->
+		</div>
 </div>
 <!-- role="alertdialog"としておくと、モーダルウィンドウが開くと同時にダイアログと表示してくれる -->
 <!-- modalとはページ上にウインドウをオーバーレイ表示させるもの -->
