Add peer connection closing process

--- a/public/index.html
+++ b/public/index.html
@@ -65,12 +65,8 @@
 		<!-- playsinline属性を指定すると要素の再生領域内で映像を再生する。 -->
     <video id="localVideo" muted autoplay playsinline></video>
 		<!-- videoタグにautoplay属性が指定されると再生可能になった時点で即座に再生が始まる -->
-		<div id="remote-videos">
-		<!--
-    <video id="remoteVideo-1" autoplay playsinline></video>
-		<video id="remoteVideo-2" autoplay playsinline></video>
-		<video id="remoteVideo-3" autoplay playsinline></video>
-		-->
+		<div id="remoteVideos">
+		<!-- 接続相手のvideo要素は動的に生成 -->
 		<!-- 補足：src属性のなかに表示したいメディアへのパスを含めると、その動画が再生可能になる -->
 		</div>
 </div>
